--- a/SwapSync____Axelar-master/SwapSync____Axelar-master/Front-End/index.html
+++ b/SwapSync____Axelar-master/SwapSync____Axelar-master/Front-End/index.html
@@ -1,26 +1,37 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SwapSync</title>
     <script src="index.js" type="module"></script>
-</head>
-<body>
-    <h1> SwapSync</h1>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
 
-   <button id="connectButton"> Connect</button><br><br>
+      <div class="login-container">
+
+        <h1>SwapSync</h1>
+
+        <h2 class="header">Welcome to SwaySync</h2>
+        <img src="./imgs/undraw_mobile_apps_re_3wjf 1.png"/>
+
+        <button class="big-btn">Login</button>
+        <button class="big-btn">Register</button>
+      </div>
 
 
+      <!-- <button id="connectButton">Connect</button><br /><br />
 
-   <button id= "Send"> Send(For User B) </button>
-   <input id="amount" placeholder=" amount "/><br><br> 
+      <button id="Send">Send(For User B)</button>
+      <input id="amount" placeholder=" amount " /><br /><br />
 
-   <button id= "SendButton"> Send(For User A) </button>
-   <input id="amountForUserA" placeholder=" amount "/><br><br> 
-   
-   <!-- User B sends his funds to the respective chain -->
-<!--
+      <button id="SendButton">Send(For User A)</button>
+      <input id="amountForUserA" placeholder=" amount " /><br /><br /> -->
+
+      <!-- User B sends his funds to the respective chain -->
+      <!--
    <button id= "approveButton"> Approve </button>
    <input id="spender" placeholder=" spender address "/><br><br>
    <input id="amountToApprove" placeholder=" GUST amount "/><br><br>
@@ -28,11 +39,6 @@
    <button id= "permitButton"> Permit </button>
    <input id="value" placeholder=" Amount Of Gust "/><br><br>
    <input id="spenderAddress" placeholder=" spenderAddress "/><br><br> -->
-
-   
-  
-
-
-    
-</body>
+    </div>
+  </body>
 </html>
